Fix mySQL get metadata and minor bugs.